<resources>
    <string name="app_name">BikeTrainer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">BikeTrainer</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="prefs_file">com.edu.unal.biketrainer.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">390524631967880</string>
    <string name="fb_login_protocol_scheme">fb390524631967880</string>

    <string name="msg_long_press_map_to_place_waypoint">Long press on the map to place a waypoint</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="no_routes">No routes found</string>
    <string name="route_request_failed">Route request failed</string>
    <string name="steps_in_route">Steps in route</string>
    <string name="recording_route">Record Route</string>
    <string name="routes">Rutas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_location_permission_explanation">Please, allow us to use your device location</string>
    <string name="user_location_permission_not_granted">Sorry, permissions not yet granted</string>
    <string name="new_location">New Location</string>
    <string name="start_recording">¡COMENCEMOS!</string>
    <string name="stop_recording">HEMOS TERMINADO</string>
    <string name="save_route">SAVE</string>
    <string name="menu_routes_record">Nueva Ruta</string>
    <string name="menu_routes_list">Rutas Disponibles</string>
    <string name="go_back">Volver</string>
    <string name="menu_my_routes_list">Mis Rutas</string>
    <string name="name_label_item">Ruta: </string>
    <string name="level_label_item">Dificultad: </string>
    <string name="security_label_item">Seguridad: </string>
    <string name="recommended_routes">Rutas Recomendadas</string>
    <string name="bike_trainer">Bogotá Bike Trainer</string>
    <string name="menu_near_routes">Rutas Cercanas</string>
    <string name="menu_top_routes">Mejor Valoradas</string>
    <string name="menu_recommended_routes">Recomendadas para ti</string>
    <string name="HEX_CHARS">phqiHmHGwJfFNNAx</string>
    <string name="digest_method">SHA-256</string>

    <string name="groups">Grupos</string>
    <string name="menu_groups_record">Nuevo Grupo</string>
    <string name="menu_my_groups_list">Mis Grupos</string>
    <string name="recommended_groups">Grupos Recomendadas</string>
    <string name="menu_near_groups">Grupos Cercanos</string>
    <string name="menu_top_groups">Mejor Valorados</string>
    <string name="menu_recommended_groups">Recomendados para ti</string>
    <string name="menu_groups_list">Grupos Disponibles</string>

    <string name="groups_list_routes">grupos_rutas</string>
    <string name="name_label_item_group">Grupo: </string>
    <string name="level_label_item_group">Nivel: </string>
    <string name="bikers_label_item_group">Participantes: </string>
    <string name="for_you">Para ti</string>

    <string-array name="levels">
        <item>Principiante</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
        <item>Experto</item>
    </string-array>

    <string-array name="bikers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>