<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="mobile_navigation">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/mapbox_ic_recenter"
            android:title="@string/routes" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/groups" />

        <item
            android:id="@id/nav_host"
            android:title="@string/bike_trainer"
            android:visible="false" />
    </group>

    <group android:id="@+id/sesion">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_logout" />
    </group>

</menu>